<resources>

    <string name="app_name">TourGuide</string>
    <string name="Navigation_drawer_open">Open Navigation Drawer</string>
    <string name="Navigation_drawer_close">close Navigation Drawer</string>
    <string name="home">Home</string>
    <string name="eat_and_drink">Eat and Drink</string>
    <string name="stay">Stay</string>
    <string name="events_and_festival">Events and Festival</string>
    <string name="edinburgh">Edinburgh</string>
    <string name="information">Information</string>
    <string name="opening">Opening</string>
    <string name="location">location</string>
    <string name="web">web</string>
    <string name="price">price</string>
    <string name="home_title_1">Edinburgh Castle</string>
    <string name="home_info_1">Edinburgh Castle is the most recognizable landmark in the city, it sits atop a volcanic peak and dominates the city skyline.</string>
    <string name="home_location_1">Castle Hill, Edinburgh</string>
    <string name="home_time_1">Best visit: opened 24*7</string>
    <string name="home_web_1">https://www.cntraveler.com/destinations/edinburgh</string>
    <string name="home_title_2">Palace of Holyroodhouse and Holyrood Abbey</string>
    <string name="home_info_2">The Palace of Holyroodhouse — usually simply referred to as Holyrood Palace — is the Queen\'s official Edinburgh residence and has frequently been at the center of Scottish history</string>
    <string name="home_location_2">Royal Mile, Canongate, Edinburgh</string>
    <string name="home_title_3">The Royal Mile</string>
    <string name="home_info_3">The Royal Mile refers to the streets linking Edinburgh Castle and the Palace of Holyroodhouse.</string>
    <string name="default_location">Edinburgh</string>
    <string name="home_title_4">Arthur\'s Seat and the Salisbury Crags</string>
    <string name="home_info_4">Arthur\'s Seat is the highest point in the 640-acre Holyrood Park. The spectacular views from the top encompass the whole city.</string>
    <string name="home_title_5">Scottish National Gallery &amp; Portrait Gallery</string>
    <string name="home_location_5">The Mound, Edinburgh</string>
    <string name="home_info_5">Founded in 1859, the Scottish National Gallery is the country\'s second major art collection and displays Scotland\'s biggest collection of European paintings and sculptures.</string>
    <string name="home_web_5"> https://www.nationalgalleries.org/</string>
    <string name="cafe_title_1">Voujon</string>
    <string name="cafe_info_1">Food and ambience: Indian, Asian, Bangladeshi, Vegetarian Friendly, Vegan Options, Halal</string>
    <string name="cafe_price_1">45 - 140</string>
    <string name="cafe_time_1">open: 5:00 P.M-11:00 PM</string>
    <string name="cafe_location_1">107 Newington Road, Edinburgh EH9 1QW Scotland</string>
    <string name="cafe_web_1">http://www.voujonedinburgh.com/</string>
    <string name="cafe_title_2">Condita</string>
    <string name="cafe_info_2">Food and Ambience: British, Scottish, International, Contemporary, Vegetarian Friendly</string>
    <string name="cafe_price_2">80 - 120</string>
    <string name="cafe_time_2">07:00 A.M-11:00 P.M</string>
    <string name="cafe_location_2">15 Salisbury Place, Edinburgh EH9 1SL Scotland</string>
    <string name="cafe_web_2">https://www.condita.co.uk/</string>
    <string name="cafe_info_3">Cuisine: Vegetarian Friendly, Vegan Options, Gluten Free Options</string>
    <string name="cafe_info_4">serve: Local cuisine, European, British, Contemporary, Scottish, Healthy</string>
    <string name="cafe_info_5">Food serve: European, British, Fusion, Scottish</string>
    <string name="cafe_price_5">20 - 100</string>
    <string name="cafe_price_3">80 - 140</string>
    <string name="cafe_price_4">35 - 80</string>
    <string name="cafe_time_3">08:00 A.M-11:00 P.M</string>
    <string name="cafe_time_4">09:00 A.M-11:00 P.M</string>
    <string name="cafe_time_5">11:00 A.M-8:00 P.M</string>
    <string name="cafe_location_3">54 St. Stephen Street, Edinburgh EH3 5AL Scotland</string>
    <string name="cafe_location_4">182-184 Bruntsfield Place, Edinburgh EH10 4DF Scotland</string>
    <string name="cafe_location_5">187 Great Junction Street, Edinburgh EH6 5LQ Scotland</string>
    <string name="cafe_web_3">http://www.thestockbridgerestaurant.co.uk/</string>
    <string name="cafe_web_4">http://www.cafegrande.cafe/</string>
    <string name="cafe_web_5">https://www.auroraedinburgh.co.uk/</string>
    <string name="cafe_title_3">Stockbridge Restaurant</string>
    <string name="cafe_title_4">Cafe Grande</string>
    <string name="cafe_title_5">Aurora</string>
    <string name="hotel_default_time">working hour: 24*7</string>
    <string name="hotel_info_1">This hotel, in an exciting, newly vibrant area, is one of the buzziest, most stylish places to stay in town. \nAmenities: Bar, WiFi, Pool</string>
    <string name="hotel_info_2">The vibe here is guesthouse meets Soho House–style member\'s club, with all the perks of a boutique hotel.</string>
    <string name="hotel_info_3">Inside the doors of Eden Locke\'s austere Georgian exterior is a hip, pastel space that won\'t rest until you Instagram it.</string>
    <string name="hotel_info_4">The thrilling interior design of this Royal Mile hotel is a nice contrast to the buttoned-up architecture outside.</string>
    <string name="hotel_info_5">The vibe here is cozy, modern, and vintage all in one, with rich colors, antique furniture, and original architectural details.</string>
    <string name="hotel_price_1">110 - 140</string>
    <string name="hotel_price_2">80 - 120</string>
    <string name="hotel_price_3">60 - 80</string>
    <string name="hotel_price_4">55-90</string>
    <string name="hotel_price_5">90 - 180</string>
    <string name="hotel_location_1">St. Andrew Square, Edinburgh, EH2 2AD, United Kingdom</string>
    <string name="hotel_location_2">4 West Coates, Edinburgh, EH12 5JQ, United Kingdom</string>
    <string name="hotel_location_3">127 George Street, Edinburgh, EH2, United Kingdom</string>
    <string name="hotel_location_4">1 George IV Bridge, Edinburgh, EH1 1AD, United Kingdom</string>
    <string name="hotel_location_5">28 Calton Hill The Rock House, Edinburgh, Scotland EH1 3BJ, United Kingdom</string>
    <string name="hotel_web_1">www.lateralcity.com</string>
    <string name="hotel_web_2">thedunstane.com</string>
    <string name="hotel_web_3">https://www.cntraveler.com/hotels/edinburgh/eden-locke</string>
    <string name="hotel_web_4">https://www.radissonhotels.com/en-us/</string>
    <string name="hotel_web_5">https://www.cntraveler.com/hotels/edinburgh/rock-house</string>
    <string name="hotel_title_1">The Edinburgh Grand</string>
    <string name="hotel_title_2">The Dunstane Houses</string>
    <string name="hotel_title_3">Eden Locke</string>
    <string name="hotel_title_4">Radisson Collection Hotel, Royal Mile Edinburgh</string>
    <string name="hotel_title_5">Rock House</string>
    <string name="event_info_1">Discover exciting new cinema, be part of the buzz of the red carpet glamour and meet the stars behind the films at the Edinburgh International Film Festival.</string>
    <string name="event_info_2">As the bells strike midnight, join hands with friends from across the globe in the world’s biggest rendition of Auld Lang Syne!</string>
    <string name="event_info_3">\"The Edinburgh Science Festival is the UK’s largest Science Festival with almost 270 events for families and adults over the course of two weeks. \"</string>
    <string name="event_info_4">There are few who can resist the stirring skirl of the pipes and the powerful crash of the drums at the Royal Edinburgh Military Tattoo!</string>
    <string name="event_info_5">The Edinburgh International Festival is the leading event in Scotland\'s cultural calendar and turns the capital city into the world\'s cultural hotspot every August.</string>
    <string name="event_time_1">17 June 2020 to 28 June 2020</string>
    <string name="event_time_2">30 December 2020 to 1 January 2021</string>
    <string name="event_time_3">4 April - 19 April 2020</string>
    <string name="event_time_4">7 August – 29 August 2020</string>
    <string name="event_time_5">7 August – 31 August 2020</string>
    <string name="event_web_1">https://www.edfilmfest.org.uk/</string>
    <string name="event_web_2">https://www.edinburghshogmanay.com/</string>
    <string name="event_web_3">https://www.sciencefestival.co.uk/</string>
    <string name="event_web_4">https://www.edintattoo.co.uk/</string>
    <string name="event_web_5">https://www.eif.co.uk/</string>
    <string name="event_location_1">Edinburgh</string>
    <string name="event_title_1">Edinburgh International Film Festival</string>
    <string name="event_title_2">Edinburgh\’s Hogmanay</string>
    <string name="event_title_3">Edinburgh International Science Festival</string>
    <string name="event_title_4">The Royal Edinburgh Military Tattoo</string>
    <string name="event_title_5">Edinburgh International Festival</string>

</resources>