<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/ly_6"
    android:layout_marginTop="@dimen/ly_6"
    android:layout_marginEnd="@dimen/ly_6"
    android:layout_marginBottom="@dimen/ly_6"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/background"
    app:cardCornerRadius="@dimen/ly_8"
    app:cardElevation="@dimen/ly_6">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/home_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/ly_220"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/home_title"
            style="@style/card_title_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_img"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/home_info"
            style="@style/card_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_title"
            android:text="@string/information" />

        <TextView
            android:id="@+id/home_time"
            style="@style/card_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_info"
            android:drawableStart="@drawable/ic_baseline_access_time_24"
            android:text="@string/opening" />

        <TextView
            android:id="@+id/home_location"
            style="@style/card_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_time"
            android:drawableStart="@drawable/ic_baseline_location_on_24"
            android:text="@string/location" />

        <TextView
            android:id="@+id/home_web"
            style="@style/card_info_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/home_location"
            android:autoLink="web"
            android:drawableStart="@drawable/ic_baseline_link_24"
            android:text="@string/web" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>